add collection service
